--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@import '../css/normileze/normileze.css';
 :root {
   --accent-color: #2196f3;
   --accent-btn-color: #188ce8;
@@ -66,9 +65,9 @@ a {
 }
 
 .container {
-  width: 1200px;
   margin-left: auto;
   margin-right: auto;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -93,12 +92,12 @@ a {
   border: var(--accent-color);
   border-radius: 4px;
   padding: 10px 32px;
-  font-weight: 700;
   font-size: 16px;
-  letter-spacing: 0.06em;
-  line-height: 1.8;
+  font-weight: 700;
+  line-height: 1.875;
   transition: background-color var(--transition-time) var(--transition-timing-function);
 }
+
 .button:hover, .button:focus {
   background-color: var(--accent-btn-color);
 }
@@ -110,26 +109,27 @@ a {
 }
 
 .logo-header {
-  color: var(--accent-color);
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 1.1923076923;
   margin: 24px 93px 25px auto;
   font-family: "Raleway";
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  color: var(--accent-color);
 }
+
 .logo-header span {
-  color: var(--maine);
-  font-family: "Raleway";
-  font-weight: 700;
   font-size: 26px;
-  line-height: 1.19;
+  font-weight: 700;
+  line-height: 1.1923076923;
+  font-family: "Raleway";
+  color: var(--maine);
 }
 
 .header {
   border-bottom: 1px solid var(--header-border);
 }
 
-.header > .container {
+.header>.container {
   display: flex;
   align-items: center;
 }
@@ -171,6 +171,7 @@ a {
   line-height: 1.14;
   transition: color var(--transition-time) var(--transition-timing-function);
 }
+
 .nav-contact.link {
   display: flex;
   align-items: center;
@@ -179,11 +180,16 @@ a {
   padding-bottom: 32px;
 }
 
+.nav-contact:hover, .nav-contact:focus {
+  color: var(--accent-color);
+}
+
 .header-nav.link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
 }
+
 .header-nav:hover, .header-nav:focus {
   color: var(--accent-color);
 }
@@ -193,15 +199,13 @@ a {
   margin-left: auto;
   column-gap: 50px;
 }
-.header-contacts:hover, .header-contacts:focus {
-  color: var(--accent-color);
-}
 
 .nav-icon {
   margin-right: 10px;
   fill: var(--text);
   transition: fill var(--transition-time) var(--transition-timing-function);
 }
+
 .nav-contact:hover .nav-icon, .nav-contact:focus .nav-icon {
   fill: var(--accent-color);
 }
@@ -215,19 +219,19 @@ a {
   margin: 0 auto;
   margin-bottom: 30px;
   text-transform: uppercase;
-  font-weight: 900;
   font-size: 44px;
-  line-height: 1.36;
+  font-weight: 900;
+  line-height: 1.3636363636;
   letter-spacing: 0.06em;
   color: var(--white);
 }
 
 .hero {
+  margin-left: auto;
+  margin-right: auto;
   background-color: #c4c4c4;
   text-align: center;
   padding: 200px 0;
-  margin-left: auto;
-  margin-right: auto;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
   background-position: center;
   background-size: cover;
@@ -244,12 +248,11 @@ a {
 }
 
 .features-title {
-  text-transform: uppercase;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 16px;
-  margin-bottom: 10px;
   font-size: 14px;
+  font-weight: 700;
+  line-height: 1.1428571429;
+  text-transform: uppercase;
+  margin-bottom: 10px;
   color: var(--maine);
 }
 
@@ -271,10 +274,10 @@ a {
 }
 
 .examples-title {
-  color: var(--maine);
-  font-weight: 700;
   font-size: 36px;
-  line-height: 1.17;
+  font-weight: 700;
+  line-height: 1.1666666667;
+  color: var(--maine);
   text-align: center;
   margin-bottom: 50px;
 }
@@ -314,21 +317,20 @@ a {
 }
 
 .team__title {
-  color: var(--maine);
-  margin-bottom: 50px;
-  text-align: center;
-  font-weight: 700;
   font-size: 36px;
-  line-height: 1.17;
+  font-weight: 700;
+  line-height: 1.1666666667;
+  margin-bottom: 50px;
+  color: var(--maine);
 }
 
 .team__member {
-  color: var(--maine);
   margin-bottom: 10px;
   text-align: center;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.19;
+  color: var(--maine);
 }
 
 .team__position {
@@ -359,6 +361,10 @@ a {
   background-color: transparent;
 }
 
+.socialmedia-list__item:hover .socialmedia-list__icon, .socialmedia-list__item:focus .socialmedia-list__icon {
+  fill: var(--white);
+}
+
 .socialmedia-list {
   display: flex;
   justify-content: center;
@@ -378,14 +384,8 @@ a {
   transition: background-color var(--transition-time) var(--transition-timing-function), fill var(--transition-time) var(--transition-timing-function);
 }
 
-.socialmedia-list__item:hover,
-.socialmedia-list__item:focus {
+.socialmedia-list__item:hover, .socialmedia-list__item:focus {
   background-color: var(--accent-color);
-}
-
-.socialmedia-list__item:hover .socialmedia-list__icon,
-.socialmedia-list__item:focus .socialmedia-list__icon {
-  fill: var(--white);
 }
 
 .socialmedia-list {
@@ -400,6 +400,7 @@ a {
   fill: var(--bgc);
   background-color: transparent;
 }
+
 .socialmedia-list__item:hover .socialmedia-list__icon, .socialmedia-list__item:focus .socialmedia-list__icon {
   fill: var(--white);
 }
@@ -414,14 +415,15 @@ a {
   background-color: transparent;
   transition: background-color var(--transition-time) var(--transition-timing-function), fill var(--transition-time) var(--transition-timing-function);
 }
+
 .socialmedia-list__item:hover, .socialmedia-list__item:focus {
   background-color: var(--accent-color);
 }
 
 .clients-title {
-  font-weight: 700;
   font-size: 36px;
-  line-height: 42px;
+  font-weight: 700;
+  line-height: 1.1666666667;
   text-align: center;
   margin-bottom: 50px;
   color: var(--maine);
@@ -445,11 +447,9 @@ a {
   background-color: var(--white);
   transition: border var(--transition-time) var(--transition-timing-function);
 }
+
 .clients-item:hover, .clients-item:focus {
   border: 1px solid var(--accent-color);
-}
-.clients-item:hover .clients-item-logo, .clients-item:focus .clients-item-logo {
-  fill: var(--accent-color);
 }
 
 .clients-item-logo {
@@ -457,19 +457,25 @@ a {
   transition: fill var(--transition-time) var(--transition-timing-function);
 }
 
+.clients-item:hover .clients-item-logo, .clients-item:focus .clients-item-logo {
+  fill: var(--accent-color);
+}
+
 .footer {
   padding: 60px 0;
   background-color: var(--background-color-dark);
 }
+
 .footer .container {
   display: flex;
   align-items: baseline;
 }
-.footer .container .footer__logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
+
+.footer>.container .footer__logo {
   font-size: 26px;
-  line-height: 1.19;
+  font-weight: 700;
+  line-height: 1.1923076923;
+  font-family: "Raleway", sans-serif;
   color: var(--accent-color);
   transition: color var(--transition-time) var(--transition-timing-function);
 }
@@ -478,32 +484,30 @@ a {
   margin-right: 70px;
 }
 
-.footer-form-wrapper {
+.footer__form-wrapper {
   margin-left: auto;
 }
 
-.footer-adress {
+.adress_list {
   font-style: normal;
   line-height: 1.71;
   color: var(--white);
 }
 
-.footer-location {
-  margin-bottom: 20px;
-}
-
-.footer-location {
+.address__location {
   display: inline-block;
-  color: var(--white);
   margin-bottom: 9px;
   line-height: 24px;
+  color: var(--white);
+  transition: color var(--transition-time) var(--transition-timing-function);
 }
 
-.footer-contact {
+.address__contact {
   color: rgba(255, 255, 255, 0.6);
+  transition: color var(--transition-time) var(--transition-timing-function);
 }
 
-.footer-contact-item {
+.address__item {
   margin-bottom: 9px;
 }
 
@@ -512,48 +516,34 @@ a {
   color: var(--accent-color);
 }
 
-.footer-location,
-.footer-contact,
-.footer-contact {
-  transition: color var(--transition-time) var(--transition-timing-function);
-}
-
-.fotter-right-title {
-  text-transform: uppercase;
-  font-weight: 700;
+.footer__title {
   font-size: 14px;
-  line-height: 16px;
+  font-weight: 700;
+  line-height: 1.1428571429;
+  text-transform: uppercase;
   margin-bottom: 20px;
   color: var(--white);
 }
 
-.socialmedia-list__item.fotter {
+.socialmedia-list__item.footer-page {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-.footer-socialmedia-icon {
+.socialmedia-list__footer-icon {
   fill: var(--white);
   transition: background-color var(--transition-time) var(--transition-timing-function);
 }
 
-.socialmedia-list__item.fotter:hover,
-.socialmedia-list__item.fotter:focus {
+.socialmedia-list__item.footer-page:hover,
+.socialmedia-list__item.footer-page:focus {
   background-color: var(--accent-color);
 }
 
-.right > .socialmedia-list {
+.footer__right>.socialmedia-list {
   margin-bottom: 0;
 }
 
-.form-title {
-  font-weight: 700;
-  line-height: 1.14;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-  color: var(--white);
-}
-
-.form-email {
+.footer__input {
   display: block;
   width: 358px;
   padding-top: 15px;
@@ -566,41 +556,41 @@ a {
   color: var(--white);
 }
 
-.footer-form > .button {
+.footer__form>.button {
   padding-right: 62px;
 }
 
-.footer-form {
+.footer__form {
   position: relative;
   display: flex;
 }
 
-.footer-icon-send {
+.footer__icon-send {
   position: absolute;
   bottom: 13px;
   right: 28px;
 }
 
 .footer__logo span {
-  font-family: "Raleway";
-  font-weight: 700;
   font-size: 26px;
-  line-height: 1.19;
+  font-weight: 700;
+  line-height: 1.1923076923;
+  font-family: "Raleway";
   color: var(--white);
   transition: color var(--transition-time) var(--transition-timing-function);
 }
+
 .footer__logo.link {
   display: inline-block;
   margin-bottom: 20px;
 }
 
-.footer__logo > span :hover,
-.footer__logo > span :focus {
+.footer__logo:hover, .footer__logo:focus {
   color: var(--accent-color);
 }
 
-.footer__logo :hover,
-.footer__logo :focus {
+.footer__logo>span:hover,
+.footer__logo>span:focus {
   color: var(--accent-color);
 }
 
@@ -631,6 +621,7 @@ a {
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: transparent;
 }
+
 .modal-close-btn:hover {
   fill: var(--accent-color);
 }
@@ -663,9 +654,7 @@ a {
   cursor: pointer;
   transition: border-color var(--transition-time) var(--transition-timing-function);
 }
-.modal-form-input:focus + .form-icon {
-  fill: var(--accent-color);
-}
+
 .modal-form-input:focus {
   border-color: var(--accent-color);
   outline: none;
@@ -688,6 +677,7 @@ a {
   margin-bottom: 20px;
   color: #000;
 }
+
 .textarea::placeholder {
   font-size: 12px;
   line-height: 1.16;
@@ -717,6 +707,10 @@ a {
   transition: fill var(--transition-time) var(--transition-timing-function);
 }
 
+.modal-form-input:focus+.form-icon {
+  fill: var(--accent-color);
+}
+
 .modal-form-checkbox-field {
   display: flex;
   align-items: center;
@@ -734,11 +728,13 @@ a {
   margin-right: 7px;
   fill: transparent;
 }
-.modal-form-checkbox:checked + .form-icon-checkbox {
+
+.modal-form-checkbox:checked+.form-icon-checkbox {
   background-color: var(--accent-color);
   border: none;
 }
-.modal-form-checkbox:checked + .form-icon-checkbox {
+
+.modal-form-checkbox:checked+.form-icon-checkbox {
   box-shadow: 0 0 0 2px rgba(0, 0, 255, 0.5);
 }
 
@@ -746,7 +742,8 @@ a {
   display: none;
   fill: var(--transition-timing-function);
 }
-.modal-form-checkbox:checked + .form-icon-checkbox > .form-icon-checkbox-icon {
+
+.modal-form-checkbox:checked+.form-icon-checkbox>.form-icon-checkbox-icon {
   display: block;
 }
 
@@ -782,8 +779,7 @@ a {
   transition: box-shadow var(--transition-time) var(--transition-timing-function);
 }
 
-.projects__link:hover,
-.projects__link:focus {
+.projects__link:hover, .projects__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
@@ -793,9 +789,10 @@ a {
 }
 
 .projects__overlay {
-  position: absolute;
   font-size: 18px;
-  line-height: 28px;
+  font-weight: 400;
+  line-height: 1.5555555556;
+  position: absolute;
   text-align: left;
   overflow: auto;
   width: 100%;
@@ -809,26 +806,24 @@ a {
   background-color: rgba(33, 150, 243, 0.9);
 }
 
-.projects__link:hover .projects__overlay,
-.projects__link:focus .projects__overlay {
+.projects__link:hover .projects__overlay, .projects__link:focus .projects__overlay {
   transform: translate(0);
 }
 
 .projects__buttons-filter-item {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.625;
   font-family: var(--primery-font-family);
   border: 0;
   border-radius: 4px;
   padding: 6px 22px;
-  font-weight: 500;
   text-align: center;
-  font-size: 16px;
-  line-height: 1.6;
   background-color: var(--background-secondary-color);
   transition: color var(--transition-time) var(--transition-timing-function), background-color var(--transition-time) var(--transition-timing-function);
 }
 
-.projects__buttons-filter-item:hover,
-.projects__buttons-filter-item:focus {
+.projects__buttons-filter-item:hover, .projects__buttons-filter-item:focus {
   color: var(--white);
   background-color: var(--accent-color);
 }
@@ -841,19 +836,19 @@ a {
 }
 
 .projects__title {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 2;
   margin-bottom: 4px;
   color: var(--maine);
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
   letter-spacing: 0.06em;
 }
 
 .projects__text {
-  color: var(--text);
-  font-weight: 400;
   font-size: 16px;
-  line-height: 1.9;
+  font-weight: 400;
+  line-height: 1.875;
+  color: var(--text);
 }
 
 .project__description {
@@ -861,4 +856,7 @@ a {
   border-right: 1px solid var(--border-color);
   border-bottom: 1px solid var(--border-color);
   padding: 20px 24px;
-}/*# sourceMappingURL=main.css.map */
+
+}
+
+/*# sourceMappingURL=main.css.map */
