--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -6,12 +6,9 @@
   border-radius: 4px;
   padding: 10px 32px;
 
-  font-weight: 700;
-  font-size: 16px;
-  letter-spacing: 0.06em;
-  line-height: 1.8;
-
+  @include font(16px, 700, 30px);
   transition: background-color var(--transition-time) var(--transition-timing-function);
+
   &:hover,
   &:focus {
     background-color: var(--accent-btn-color);
