--- a/sass/layout/_backdrop.scss
+++ b/sass/layout/_backdrop.scss
@@ -59,10 +59,6 @@
   cursor: pointer;
   transition: border-color var(--transition-time) var(--transition-timing-function);
 
-  &:focus + .form-icon {
-    fill: var(--accent-color);
-  }
-
   &:focus {
     border-color: var(--accent-color);
     outline: none;
@@ -114,6 +110,10 @@
   transform: translateY(-50%);
   left: 7px;
   transition: fill var(--transition-time) var(--transition-timing-function);
+
+  .modal-form-input:focus + & {
+    fill: var(--accent-color);
+  }
 }
 
 .modal-form-checkbox-field {
