--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,7 +1,5 @@
 .clients-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
+  @include font(36px, 700, 42px);
   text-align: center;
   margin-bottom: 50px;
   color: var(--maine);
@@ -29,14 +27,14 @@
   &:focus {
     border: 1px solid var(--accent-color);
   }
-
-  &:hover .clients-item-logo,
-  &:focus .clients-item-logo {
-    fill: var(--accent-color);
-  }
 }
 
 .clients-item-logo {
   fill: var(--bgc);
   transition: fill var(--transition-time) var(--transition-timing-function);
+
+  .clients-item:hover &,
+  .clients-item:focus & {
+    fill: var(--accent-color);
+  }
 }
