--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,46 +5,42 @@
     display: flex;
     align-items: baseline;
   }
-  .container .footer__logo {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    color: var(--accent-color);
-    transition: color var(--transition-time) var(--transition-timing-function);
-  }
+}
+.footer > .container .footer__logo {
+  @include font(26px, 700, 31px);
+  font-family: 'Raleway', sans-serif;
+  color: var(--accent-color);
+  transition: color var(--transition-time) var(--transition-timing-function);
 }
 
 .footer__left {
   margin-right: 70px;
 }
 
-.footer-form-wrapper {
+.footer__form-wrapper {
   margin-left: auto;
 }
 
-.footer-adress {
+.adress_list {
   font-style: normal;
   line-height: 1.71;
   color: var(--white);
 }
 
-.footer-location {
-  margin-bottom: 20px;
-}
-
-.footer-location {
+.address__location {
   display: inline-block;
-  color: var(--white);
   margin-bottom: 9px;
   line-height: 24px;
+  color: var(--white);
+  transition: color var(--transition-time) var(--transition-timing-function);
 }
 
-.footer-contact {
+.address__contact {
   color: rgba(255, 255, 255, 0.6);
+  transition: color var(--transition-time) var(--transition-timing-function);
 }
 
-.footer-contact-item {
+.address__item {
   margin-bottom: 9px;
 }
 
@@ -53,48 +49,32 @@
   color: var(--accent-color);
 }
 
-.footer-location,
-.footer-contact,
-.footer-contact {
-  transition: color var(--transition-time) var(--transition-timing-function);
-}
-
-.fotter-right-title {
+.footer__title {
+  @include font(14px, 700, 16px);
   text-transform: uppercase;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
   margin-bottom: 20px;
   color: var(--white);
 }
 
-.socialmedia-list__item.fotter {
+.socialmedia-list__item.footer-page {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-.footer-socialmedia-icon {
+.socialmedia-list__footer-icon {
   fill: var(--white);
   transition: background-color var(--transition-time) var(--transition-timing-function);
 }
 
-.socialmedia-list__item.fotter:hover,
-.socialmedia-list__item.fotter:focus {
+.socialmedia-list__item.footer-page:hover,
+.socialmedia-list__item.footer-page:focus {
   background-color: var(--accent-color);
 }
 
-.right > .socialmedia-list {
+.footer__right > .socialmedia-list {
   margin-bottom: 0;
 }
 
-.form-title {
-  font-weight: 700;
-  line-height: 1.14;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-  color: var(--white);
-}
-
-.form-email {
+.footer__input {
   display: block;
   width: 358px;
   padding-top: 15px;
@@ -107,16 +87,16 @@
   color: var(--white);
 }
 
-.footer-form > .button {
+.footer__form > .button {
   padding-right: 62px;
 }
 
-.footer-form {
+.footer__form {
   position: relative;
   display: flex;
 }
 
-.footer-icon-send {
+.footer__icon-send {
   position: absolute;
   bottom: 13px;
   right: 28px;
