--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -3,19 +3,16 @@
   margin: 0 auto;
   margin-bottom: 30px;
   text-transform: uppercase;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  @include font(44px, 900, 60px);
   letter-spacing: 0.06em;
   color: var(--white);
 }
 
 .hero {
+  @include margin-auto;
   background-color: #c4c4c4;
   text-align: center;
   padding: 200px 0;
-  margin-left: auto;
-  margin-right: auto;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../images/hero.jpg);
   background-position: center;
