--- a/sass/layout/_logo_footer.scss
+++ b/sass/layout/_logo_footer.scss
@@ -1,9 +1,7 @@
 .footer__logo {
   span {
+    @include font(26px, 700, 31px);
     font-family: 'Raleway';
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
     color: var(--white);
     transition: color var(--transition-time) var(--transition-timing-function);
   }
@@ -11,13 +9,14 @@
     display: inline-block;
     margin-bottom: 20px;
   }
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
-.footer__logo > span :hover,
-.footer__logo > span :focus {
-  color: var(--accent-color);
-}
-.footer__logo :hover,
-.footer__logo :focus {
+.footer__logo > span:hover,
+.footer__logo > span:focus {
   color: var(--accent-color);
 }
