--- a/sass/layout/_portfolio-page.scss
+++ b/sass/layout/_portfolio-page.scss
@@ -12,12 +12,12 @@
 .projects__link {
   display: block;
   transition: box-shadow var(--transition-time) var(--transition-timing-function);
-}
 
-.projects__link:hover,
-.projects__link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
 .projects__wrapper {
@@ -26,10 +26,9 @@
 }
 
 .projects__overlay {
+  @include font(18px, 400, 28px);
   position: absolute;
-  font-size: 18px;
-  line-height: 28px;
-  text-align: left;
+    text-align: left;
   overflow: auto;
   width: 100%;
   height: 100%;
@@ -40,32 +39,30 @@
   transition: transform var(--transition-time) var(--transition-timing-function);
   color: var(--white);
   background-color: rgba(33, 150, 243, 0.9);
-}
 
-.projects__link:hover .projects__overlay,
-.projects__link:focus .projects__overlay {
-  transform: translate(0);
+  .projects__link:hover &,
+  .projects__link:focus & {
+    transform: translate(0);
+  }
 }
 
 .projects__buttons-filter-item {
+  @include font(16px, 500, 26px);
   font-family: var(--primery-font-family);
   border: 0;
   border-radius: 4px;
   padding: 6px 22px;
-  font-weight: 500;
   text-align: center;
-  font-size: 16px;
-  line-height: 1.6;
   background-color: var(--background-secondary-color);
 
   transition: color var(--transition-time) var(--transition-timing-function),
     background-color var(--transition-time) var(--transition-timing-function);
-}
 
-.projects__buttons-filter-item:hover,
-.projects__buttons-filter-item:focus {
-  color: var(--white);
-  background-color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: var(--white);
+    background-color: var(--accent-color);
+  }
 }
 
 .projects__buttons-filter.list {
@@ -76,19 +73,15 @@
 }
 
 .projects__title {
+  @include font(18px, 700, 36px);
   margin-bottom: 4px;
   color: var(--maine);
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
   letter-spacing: 0.06em;
 }
 
 .projects__text {
+  @include font(16px, 400, 30px);
   color: var(--text);
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.9;
 }
 
 .project__description {
