--- a/sass/layout/_backdrop.scss
+++ b/sass/layout/_backdrop.scss
@@ -1,3 +1,14 @@
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  background: rgba(0, 0, 0, 0.2);
+  transition: opacity 400ms ease-in, visibility 400ms ease-in;
+}
+
 .modal {
   position: absolute;
   top: 50%;
