--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -6,6 +6,8 @@
   @include font(36px, 700, 42px);
   margin-bottom: 50px;
   color: var(--maine);
+  text-align: center;
+  color: var(--maine);
 }
 
 .team__member {
